# ffi-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flow.drawio  run.sh  rust-toolchain  tmp.json
csrc/: test1.c  test1.h
src/: analysis_option.rs  callback.rs  lib.rs  metadata.rs  utils.rs
