[package]
name = "ffi-checker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-ffi-checker"

[[bin]]
name = "checker"

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
anyhow = "1"
infer = "0.19.0"

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }

[package.metadata.rust-analyzer] 
rustc_private=true
